# blending

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake
include/blending/: blender.h  blending.h  common.h  feather_blender.h  multiband_blender.h  mvc_blender.h  naive_blender.h  remapper.h  script.h  seam_finder.h  transform.h
include/utils/: image_utils.h
resources/: script.txt
scripts/: header_gen.py  utils.py
src/blending/: CMakeLists.txt  feather_blender.cc  multiband_blender.cc  mvc_blender.cc  naive_blender.cc  remapper.cc  script.cc  seam_finder.cc  transform.cc
src/examples/multiband_blender_demo/: CMakeLists.txt  main.cc
src/examples/mvc_blender_demo/: CMakeLists.txt  main.cc
src/examples/remapper_demo/: CMakeLists.txt  main.cc
src/examples/seam_finder_demo/: CMakeLists.txt  main.cc
src/utils/: CMakeLists.txt  image_utils.cc
